    error cases.  Thanks to Jakub Wilk for reporting it.
    (Closes: #793092)
  * Dh_Lib.pm: Apply patch from Guillem Jover to use the
    value of dpkg-architecture variables from the environment,
    if present.  (Closes: #793440)
  * Dh_Buildsystems.pm/Dh_Lib.pm: Import Exporter's import
    subroutine rather than adding Exporter to @ISA.

 -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 15:08:19 +0200

debhelper (9.20150628) unstable; urgency=medium

  * Upload to unstable with ddebs support disabled by default.

  [ Niels Thykier ]
  * Buildsystem.pm: Apply patch from Emmanuel Bourg to
    provide doit_in_{build,source}dir_noerror methods.
    (Closes: #785811)
  * Dh_Lib.pm: Promote error_exitcode to a regular exported
    subroutine (from an internal one).
  * dh_compress: Apply patch from Osamu Aoki to avoid compressing
    ".xhtml" files and to use a POSIX compliant find expression.
    (Closes: #740405)
  * dh_makeshlibs: Fix typo in manpage.  Thanks to Jakub Wilk for
    reporting it.  (Closes: #788473)
  * dh_auto_test: Run tests by default even during cross-building.
    (Closes: #726967)
  * dh_gencontrol: Put ddebs in the "debugsym" section.
  * dh_strip: Support a new --[no-]ddebs option intended for
    packages to disable automatic ddebs.
  * dh_strip: Do not create ddebs for "-dbg" packages.
  * dh_builddeb/dh_gencontrol: Let dpkg figure out the name
    of the ddebs itself now that ddebs uses a ".deb"
    extension.
  * dh_md5sums: create DEBIAN dir in ddebs before using it.
    (Closes: #786695)

  [ Thibaut Paumard ]
  * Bug fix: "dh_usrlocal leaves directories behind", thanks to Andreas
    Beckmann (Closes: #788098).

 -- Niels Thykier <niels@thykier.net>  Sun, 28 Jun 2015 13:51:48 +0200

debhelper (9.20150519+ddebs) experimental; urgency=medium

  * dh_strip: Add --ddeb-migration option to support migration
    from a --dbg-package to a automatic ddeb.
  * Dh_Lib.pm: Add "package_multiarch" function.